--- a/style.css
+++ b/style.css
@@ -91,3 +91,13 @@ h1{
     text-align: center;
     font-size: 40px;
 }
+/* .bob {
+display: none;   
+ position: fixed;    
+ padding-top: 100px; 
+    left: 90; 
+     top: 0; 
+       width: 80%;    
+        height: 100%;    
+         overflow: auto;
+} */
